# qt-server-demo

./: README.md
serverDemo/: CMakeLists.txt
serverDemo/client/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h
serverDemo/server/: CMakeLists.txt  main.cpp
serverDemo/shared/: LocalSettings.h
